--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,15 @@ body {
 }
 
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #646cffaa)
 }
 
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #61dafbaa)
+}
+
+button > span {
+  color: #848CFC
 }
 
 @keyframes logo-spin {
